flux/manifests/04-apps/media/management/immich/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    app.kubernetes.io/name: immich
    images/dockerhub: "true"
